--- a/Bakery workshop/index.html
+++ b/Bakery workshop/index.html
@@ -20,13 +20,12 @@
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- local css link -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
     <title>Home Page</title>
 </head>
 
-<body>
-
-    <div class="toast" id="toast">
+<body onload="getWorkshopData()">
+    <div class="toaster" id="toast">
         <p class="message" id="message"></p>
     </div>
 
@@ -51,10 +50,18 @@
                         <a href="./attendees.html" class="nav-link">Attendees</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./register.html" class="nav-link">Register</a>
+                        <a href="./createWorkshop.html" class="nav-link">Workshop</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="./login.html" class="nav-link">login</a>
+                    <div id="registerLog" class="nav-item">
+                        <li class="nav-item">
+                            <a href="./register.html" class="nav-link log">SignUp</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./login.html" class="nav-link log">SignIn</a>
+                        </li>
+                    </div>       
+                    <li onclick="logout()" id="logoutBtn" class="nav-item">
+                        <a href="" id="logout" class="nav-link">logout</a>
                     </li>
                 </ul>
             </div>
@@ -95,17 +102,8 @@
         <div class="container">
             <h2 class=" font-baloo text-center fs-1 pb-5">About Us</h2>
             <div class="d-flex align-items-center">
-                <div class="font-baloo w-50">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor adipisci nulla voluptates eaque
-                        et nemo aperiam, harum quia explicabo optio consectetur, iste voluptate, animi a voluptatum
-                        consequuntur fugiat ea odio! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Perferendis, illo maxime, fugiat quisquam veniam ipsa ut molestias perspiciatis nostrum porro
-                        animi doloribus ipsam tempore aut nihil, quasi autem labore nesciunt. Lorem ipsum dolor sit amet
-                        consectetur adipisicing elit. Doloribus quidem necessitatibus est harum, omnis aperiam hic.
-                        Optio maxime, sapiente dolor quos molestias quod iusto, nisi nulla enim nemo voluptates sit?
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque cumque, veniam molestiae odit
-                        debitis quas dolorem voluptatibus? Autem sint, illum quis commodi odio eveniet magni dolore
-                        omnis. Et, at officia.</p>
+                <div class="font-baloo w-50 aboutus">
+                    <p>Bakery is an art and science. A baker can prepare different products from the same ingredients by using different methods. Bakery & Confectionery Products ranging from Breads, morning bakeries, pastries, chocolates, cookies, Breads and Cakes, Morning Bakery’s and Variants, pastries and variants. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem debitis nemo aut inventore odio laudantium assumenda, possimus, dignissimos ex voluptates corrupti voluptatibus cupiditate nihil neque deserunt excepturi officia sunt eum.Royal icing is typically made using eggwhites, but Priyanka Pal’s class will teach you how to make royal icing from scratch without eggs, including a vegan version. It will also teach you how to make stencils on your own. It also tackles advanced concepts like piping large panels and intricate designs and assembling these. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis necessitatibus et ratione molestias culpa suscipit sint facilis aperiam! Facilis placeat esse excepturi debitis provident qui dolorem culpa harum iste repellat laboriosam nulla, modi enim obcaecati repellendus. Dolores possimus laudantium animi. Distinctio nulla enim dicta, iusto velit eaque ratione natus obcaecati?</p>
                 </div>
                 <img src="./img/4.jpg" alt="" class="card-img-top w-50 h-25">
             </div>
@@ -137,8 +135,7 @@
                     <h3>Contact Information</h3>
                 </div>
                 <div>Visit us at : First floor,metro station,144 A , <br>Lane Number 1, Rahman Road,<br> New delhi,
-                    Delhi
-                    !!0030</div>
+                    Delhi 840030</div>
                 <div>Call us at : 9876543210</div>
                 <div>Email us at: Bakeaana124@gmail.com</div>
             </div>
