--- a/Bakery workshop/login.html
+++ b/Bakery workshop/login.html
@@ -21,12 +21,12 @@
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- local css link -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
 
-    <div class="toast" id="toast">
+    <div class="toaster" id="toast">
         <p class="message" id="message"></p>
     </div>
 
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-lg-7 my-4">
                     <h1 class="font-baloo mt-4 fw-4 fs-1 text-center">Login Here</h1>
-                    <form action="" method="" class="ms-5 my-5">
+                    <form id="loginForm" action="" method="" class="ms-5 my-5">
                         <div class="offset-2 form-row my-3 ">
                             <input id="email" name="email" type="text" placeholder="Email" class="w-75 p-3">
                         </div>
