--- a/Bakery workshop/register.html
+++ b/Bakery workshop/register.html
@@ -47,8 +47,16 @@
                     <li class="nav-item">
                         <a href="#aboutus" class="nav-link">AboutUs</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#instructor" class="nav-link">Instructors</a>
+                    <div id="registerLog" class="nav-item">
+                        <li class="nav-item">
+                            <a href="./register.html" class="nav-link log">SignUp</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./login.html" class="nav-link log">SignIn</a>
+                        </li>
+                    </div>
+                    <li onclick="logout()" id="logoutBtn" class="nav-item">
+                        <a href="" id="logout" class="nav-link">logout</a>
                     </li>
                 </ul>
             </div>
